test/typechecker.d/invalid/export5.surc.bad
module export5 where
	two: Integer
	f: Fn(Integer Integer)

two = 2

f(x: Integer): Char = 'a'
